--- a/.env.example
+++ b/.env.example
@@ -96,8 +96,22 @@ OPENSKY_CLIENT_SECRET=
 # Server-side URL (https://) — used by Vercel edge functions to reach the relay
 WS_RELAY_URL=
 
-# Client-side URL (wss://) — used by the browser to connect via WebSocket
+# Optional client-side URL (wss://) — local/dev fallback only
 VITE_WS_RELAY_URL=
+
+# Shared secret between Vercel and Railway relay.
+# Must be set to the SAME value on both platforms in production.
+RELAY_SHARED_SECRET=
+
+# Header name used to send the relay secret (must match on both platforms)
+RELAY_AUTH_HEADER=x-relay-key
+
+# Emergency production override to allow unauthenticated relay traffic.
+# Leave unset/false in production.
+ALLOW_UNAUTHENTICATED_RELAY=false
+
+# Rolling window size (seconds) used by relay /metrics endpoint.
+RELAY_METRICS_WINDOW_SECONDS=60
 
 
 # ------ Public Data Sources (no keys required) ------
@@ -105,8 +119,7 @@ VITE_WS_RELAY_URL=
 # UCDP (Uppsala Conflict Data Program) — public API, no auth
 # UNHCR (UN Refugee Agency) — public API, no auth (CC BY 4.0)
 # Open-Meteo — public API, no auth (processes Copernicus ERA5)
-# WorldPop — public API, optional key for higher rate limits
-# WORLDPOP_API_KEY=
+# WorldPop — public API, no auth needed
 
 
 # ------ Site Configuration ------
