--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,40 @@ jobs:
         env:
           # ビルド時に必要な公開環境変数をここに追加
           VITE_VARIANT: ${{ matrix.variant }}
+
+  e2e:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Run E2E tests (runtime)
+        run: npm run test:e2e:runtime
+        env:
+          NO_PROXY: '127.0.0.1,localhost'
+
+      - name: Run E2E tests (full variant)
+        run: VITE_VARIANT=full npx playwright test --ignore-snapshots --project=chromium
+        env:
+          NO_PROXY: '127.0.0.1,localhost'
+
+      - name: Upload test artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: |
+            playwright-report/
+            test-results/
+          retention-days: 7
