ci: fix Cloudflare purge step to skip when secret not set

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,12 +65,20 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-      # Cloudflareキャッシュをパージ（デプロイ後）
+      # Cloudflareキャッシュをパージ（デプロイ後、CLOUDFLARE_ZONE_IDが設定されている場合のみ）
       - name: Purge Cloudflare cache
-        if: ${{ success() && secrets.CLOUDFLARE_ZONE_ID != '' }}
+        if: success()
+        continue-on-error: true
         run: |
+          if [ -z "$CLOUDFLARE_ZONE_ID" ]; then
+            echo "CLOUDFLARE_ZONE_ID not set, skipping cache purge"
+            exit 0
+          fi
           curl -s -X POST \
-            "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/purge_cache" \
-            -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
+            "https://api.cloudflare.com/client/v4/zones/$CLOUDFLARE_ZONE_ID/purge_cache" \
+            -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" \
             -H "Content-Type: application/json" \
             --data '{"purge_everything":true}'
+        env:
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
