feat: middleware に Basic 認証を追加（BASIC_AUTH_USER/PASS 環境変数で制御）

--- a/.env.example
+++ b/.env.example
@@ -122,6 +122,15 @@ RELAY_METRICS_WINDOW_SECONDS=60
 # WorldPop — public API, no auth needed
 
 
+# ------ Basic 認証 ------
+
+# サイト全体への Basic 認証（/api/* は対象外）
+# 未設定の場合は認証なし（ローカル開発時はそのまま）
+# パスワードは強力なランダム文字列を推奨: openssl rand -base64 32
+BASIC_AUTH_USER=
+BASIC_AUTH_PASS=
+
+
 # ------ Site Configuration ------
 
 # Site variant: "full" (worldmonitor.app) or "tech" (tech.worldmonitor.app)
